--- a/mitiv/optim/package-tree.html
+++ b/mitiv/optim/package-tree.html
@@ -72,6 +72,16 @@
 <ul>
 <li type="circle">java.lang.Object
 <ul>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/BoxedSet.html" title="class in mitiv.optim"><span class="strong">BoxedSet</span></a>
+<ul>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim"><span class="strong">SimpleBoxedSet</span></a>
+<ul>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim"><span class="strong">DoubleBoxedSet</span></a></li>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/FloatBoxedSet.html" title="class in mitiv.optim"><span class="strong">FloatBoxedSet</span></a></li>
+</ul>
+</li>
+</ul>
+</li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/ConvexSetProjector.html" title="class in mitiv.optim"><span class="strong">ConvexSetProjector</span></a>
 <ul>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/BoundProjector.html" title="class in mitiv.optim"><span class="strong">BoundProjector</span></a>
@@ -121,7 +131,6 @@
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim"><span class="strong">OptimStatus</span></a></li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim"><span class="strong">LineSearchTask</span></a></li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim"><span class="strong">LineSearchStatus</span></a></li>
-<li type="circle">mitiv.optim.<a href="../../mitiv/optim/InverseHessianApproximation.html" title="enum in mitiv.optim"><span class="strong">InverseHessianApproximation</span></a></li>
 </ul>
 </li>
 </ul>
