--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -30,6 +30,7 @@
 <li><a href="mitiv/optim/BLMVM.html" title="class in mitiv.optim">BLMVM</a></li>
 <li><a href="mitiv/base/indexing/BoundaryConditions.html" title="enum in mitiv.base.indexing">BoundaryConditions</a></li>
 <li><a href="mitiv/optim/BoundProjector.html" title="class in mitiv.optim">BoundProjector</a></li>
+<li><a href="mitiv/optim/BoxedSet.html" title="class in mitiv.optim">BoxedSet</a></li>
 <li><a href="mitiv/io/BufferedImageUtils.html" title="class in mitiv.io">BufferedImageUtils</a></li>
 <li><a href="mitiv/io/BufferedInputDataStream.html" title="class in mitiv.io">BufferedInputDataStream</a></li>
 <li><a href="mitiv/io/BufferedOutputDataStream.html" title="class in mitiv.io">BufferedOutputDataStream</a></li>
@@ -68,6 +69,7 @@
 <li><a href="mitiv/exception/DataFormatException.html" title="class in mitiv.exception">DataFormatException</a></li>
 <li><a href="mitiv/deconv/Deconvolution.html" title="class in mitiv.deconv">Deconvolution</a></li>
 <li><a href="mitiv/deconv/DeconvUtils.html" title="class in mitiv.deconv">DeconvUtils</a></li>
+<li><a href="mitiv/linalg/DiagonalOperator.html" title="class in mitiv.linalg">DiagonalOperator</a></li>
 <li><a href="mitiv/cost/DifferentiableCostFunction.html" title="interface in mitiv.cost"><i>DifferentiableCostFunction</i></a></li>
 <li><a href="mitiv/cost/DifferentiableInverseProblemCost.html" title="class in mitiv.cost">DifferentiableInverseProblemCost</a></li>
 <li><a href="mitiv/array/Double1D.html" title="class in mitiv.array">Double1D</a></li>
@@ -80,6 +82,7 @@
 <li><a href="mitiv/array/Double8D.html" title="class in mitiv.array">Double8D</a></li>
 <li><a href="mitiv/array/Double9D.html" title="class in mitiv.array">Double9D</a></li>
 <li><a href="mitiv/array/DoubleArray.html" title="interface in mitiv.array"><i>DoubleArray</i></a></li>
+<li><a href="mitiv/optim/DoubleBoxedSet.html" title="class in mitiv.optim">DoubleBoxedSet</a></li>
 <li><a href="mitiv/base/mapping/DoubleFunction.html" title="interface in mitiv.base.mapping"><i>DoubleFunction</i></a></li>
 <li><a href="mitiv/random/DoubleGenerator.html" title="interface in mitiv.random"><i>DoubleGenerator</i></a></li>
 <li><a href="mitiv/array/DoubleScalar.html" title="class in mitiv.array">DoubleScalar</a></li>
@@ -153,6 +156,7 @@
 <li><a href="mitiv/array/Float8D.html" title="class in mitiv.array">Float8D</a></li>
 <li><a href="mitiv/array/Float9D.html" title="class in mitiv.array">Float9D</a></li>
 <li><a href="mitiv/array/FloatArray.html" title="interface in mitiv.array"><i>FloatArray</i></a></li>
+<li><a href="mitiv/optim/FloatBoxedSet.html" title="class in mitiv.optim">FloatBoxedSet</a></li>
 <li><a href="mitiv/base/mapping/FloatFunction.html" title="interface in mitiv.base.mapping"><i>FloatFunction</i></a></li>
 <li><a href="mitiv/random/FloatGenerator.html" title="interface in mitiv.random"><i>FloatGenerator</i></a></li>
 <li><a href="mitiv/array/FloatScalar.html" title="class in mitiv.array">FloatScalar</a></li>
@@ -184,13 +188,13 @@
 <li><a href="mitiv/random/IntGenerator.html" title="interface in mitiv.random"><i>IntGenerator</i></a></li>
 <li><a href="mitiv/array/IntScalar.html" title="class in mitiv.array">IntScalar</a></li>
 <li><a href="mitiv/base/mapping/IntScanner.html" title="interface in mitiv.base.mapping"><i>IntScanner</i></a></li>
-<li><a href="mitiv/optim/InverseHessianApproximation.html" title="enum in mitiv.optim">InverseHessianApproximation</a></li>
 <li><a href="mitiv/optim/LBFGS.html" title="class in mitiv.optim">LBFGS</a></li>
 <li><a href="mitiv/optim/LBFGSOperator.html" title="class in mitiv.optim">LBFGSOperator</a></li>
 <li><a href="mitiv/invpb/LeftHandSideMatrix.html" title="class in mitiv.invpb">LeftHandSideMatrix</a></li>
 <li><a href="mitiv/tests/LinearConjGradTest.html" title="class in mitiv.tests">LinearConjGradTest</a></li>
 <li><a href="mitiv/linalg/LinearConjugateGradient.html" title="class in mitiv.linalg">LinearConjugateGradient</a></li>
 <li><a href="mitiv/invpb/LinearDeconvolver.html" title="class in mitiv.invpb">LinearDeconvolver</a></li>
+<li><a href="mitiv/linalg/LinearEndomorphism.html" title="class in mitiv.linalg">LinearEndomorphism</a></li>
 <li><a href="mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">LinearOperator</a></li>
 <li><a href="mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></li>
 <li><a href="mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a></li>
@@ -322,9 +326,11 @@
 <li><a href="mitiv/array/ShortScalar.html" title="class in mitiv.array">ShortScalar</a></li>
 <li><a href="mitiv/base/mapping/ShortScanner.html" title="interface in mitiv.base.mapping"><i>ShortScanner</i></a></li>
 <li><a href="mitiv/optim/SimpleBounds.html" title="class in mitiv.optim">SimpleBounds</a></li>
+<li><a href="mitiv/optim/SimpleBoxedSet.html" title="class in mitiv.optim">SimpleBoxedSet</a></li>
 <li><a href="mitiv/optim/SimpleLowerBound.html" title="class in mitiv.optim">SimpleLowerBound</a></li>
 <li><a href="mitiv/optim/SimpleUpperBound.html" title="class in mitiv.optim">SimpleUpperBound</a></li>
 <li><a href="mitiv/invpb/SimpleViewer.html" title="class in mitiv.invpb">SimpleViewer</a></li>
+<li><a href="mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception">SingularOperatorException</a></li>
 <li><a href="mitiv/array/impl/StriddenByte1D.html" title="class in mitiv.array.impl">StriddenByte1D</a></li>
 <li><a href="mitiv/array/impl/StriddenByte2D.html" title="class in mitiv.array.impl">StriddenByte2D</a></li>
 <li><a href="mitiv/array/impl/StriddenByte3D.html" title="class in mitiv.array.impl">StriddenByte3D</a></li>
